list view Actions button are not aligned correctly
list view Actions button are not aligned correctly

Issue-ID: VNFSDK-241

--- a/vnfmarket/src/main/webapp/vnfmarket/common/css/home.css
+++ b/vnfmarket/src/main/webapp/vnfmarket/common/css/home.css
@@ -968,9 +968,8 @@ input {
 }
 
 #listView .btnIconSpacing {
-	top: -2px !important;
-	position: relative;
-	/*top: -2px;*/
+	top: 0px !important;
+	position: relative;	
 	left: -3px;
 }
 
